--- a/src/css/global.css
+++ b/src/css/global.css
@@ -15,6 +15,9 @@ body{
 
 .bgWrap.home-background{
     background-color: #222222;
+    
+    /* background-color: #202124; */
+    /* background-color: #303134 */
 }
 
 h1,h2,h3 {
@@ -67,10 +70,6 @@ p{
     flex-direction: column;
     z-index: 0;
     
-}
-
-.content.home-background{
-    background-color: #313133;
 }
 
 /*******************Navbar******************/
@@ -139,6 +138,7 @@ p{
 .header{
     display: flex;
     justify-content: center;
+    pointer-events: none;
 }
 
 .header-container{
@@ -216,8 +216,12 @@ p{
     max-width: 40%;
     /* background-color: #1d1d1d; */
     background-color: #3e3d40;
+    /* background-color: #202124; */
+    /* background-color: #303134; */
     /* background-color: #211f1f; */
     /* background-color: #313133; */
+    background-color: #00000094;
+    /* background-color: #22242b; */
     border-radius: 7%;
     transition: all .2s ease-in-out;
 }
@@ -265,7 +269,8 @@ p{
 
 .card-content{
     /* background-color: #3e3d40; */
-    background-color: #585858;
+    /* background-color: #585858; */
+    background-color: #303134;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -915,7 +920,7 @@ pre{
 
 #finished2{
     font-size: 2.5em;
-    left: 5%;
+    left: 1%;
     font-family: 'Playfair Display', serif;
 }
 
@@ -951,4 +956,45 @@ pre{
 .current-text::before{
     content: "Current";  
     position: relative;
+}
+
+
+/****************************Footer****************************/
+
+.footer{
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    font-size: 24px;
+    color: ghostwhite;
+    background-color: #00000094;
+    margin-top: 5%;
+}
+
+.footer div{
+    display: flex;
+    align-items: center; 
+}
+
+.footer p{
+    margin-right: 10px;
+    pointer-events: none;
+    font-family: 'Barlow';
+}
+
+.sitemap-link{
+    color: #fff8ba;
+    cursor: pointer !important;
+}
+
+.copyright{
+    font-family: 'Barlow';
+}
+
+.footer-link-container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    margin-left: 5%;
 }
