--- a/src/css/global.css
+++ b/src/css/global.css
@@ -13,6 +13,10 @@ body{
     z-index: -1;
   }
 
+#bgWrap.light-mode{
+    display: none;
+}
+
 .bgWrap.home-background{
     background-color: #222222;
     
@@ -167,6 +171,13 @@ p{
    */
   }
 
+#header-container.light-mode h1{
+    /* color: #fff8ba; */
+    color: black;
+    font-family: "Barlow";
+    font-weight: 800;
+  }
+
 .header-title-2{ 
     left: 31%;
     display: block;
@@ -224,6 +235,10 @@ p{
     /* background-color: #22242b; */
     border-radius: 7%;
     transition: all .2s ease-in-out;
+}
+
+#card.light-mode{
+    background-color: #000;
 }
 
 .card:hover{
@@ -620,6 +635,77 @@ pre{
     border-radius: 50%;
 }
 
+/*********************Switch********************/
+
+.switch-container{
+    display: flex;
+    width: 15%;
+    justify-content: space-evenly;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 80px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    height: inherit;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 30px;
+    width: 30px;
+    left: 12px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
 /*********************Tubes********************/
 
 .row{
@@ -963,28 +1049,45 @@ pre{
 
 .footer{
     display: flex;
-    flex-grow: 1;
-    align-items: center;
-    font-size: 24px;
+    font-size: 20px;
     color: ghostwhite;
     background-color: #00000094;
+    align-items: center;
+    padding: 0 2%;
     margin-top: 5%;
 }
 
-.footer div{
-    display: flex;
-    align-items: center; 
+#footer.light-mode{
+    background-color: #000;
+}
+
+.my-description{
+    width: 40%;
+    margin: 0;
+    margin-left: 2%;
+}
+
+.profile-pic{
+    border-radius: 50%;
+}
+
+.footer h3{
+    text-align: center;
+    color: #fff8ba;
+    
+    margin-bottom: 0;
 }
 
 .footer p{
     margin-right: 10px;
     pointer-events: none;
-    font-family: 'Barlow';
 }
 
 .sitemap-link{
     color: #fff8ba;
     cursor: pointer !important;
+    text-decoration: none;
+    text-align: center;
 }
 
 .copyright{
@@ -993,8 +1096,52 @@ pre{
 
 .footer-link-container{
     height: 100%;
+    justify-content: space-around;
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    margin-left: 5%;
+    width: 20%;
+    text-align: left;
+    margin-left: auto;
 }
+
+.footer-link-inner{
+    display: flex;
+    justify-content: space-between;
+    margin: 3% 0;
+}
+
+.footer-links{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-links span{
+    margin: .2em;
+}
+
+.middle-container{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    justify-content: space-around;
+    border-left: #fff8ba27 1px solid;
+    border-right: #fff8ba27 1px solid;
+    padding: 0 4%;
+}
+
+
+.copyright-container{
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    margin-top: auto;
+    flex-grow: 1;
+}
+
+.socials{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10%;
+}
+
